# warp_fastapi

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
AppObject/: index.html
AppProject/: index.html
Attribute/: index.html
Relationship/: index.html
SQL_Types/: index.html
Types/: index.html
docs/: AppObject.md  AppProject.md  Attribute.md  Relationship.md  SQL_Types.md  Types.md  index.md  licences.md  todo.md
licences/: index.html
search/: search_index.json
tests/: conftest.py  test_alembic.py  test_code_objects.py  test_create_project.py  test_db_code.py  test_depen_code.py  test_main_code.py  test_main_objects.py  test_model_code.py  test_name_config.py  test_repo_code.py  test_routes_code.py  test_schema_code.py  test_service_code.py  test_settings_code.py  test_test_code.py
todo/: index.html
warp_fastapi/: __init__.py  app_object.py  app_project.py  attributes.py  base.py  config.py  create_project.py  data_types.py  exceptions.py  main.py  relationships.py  sqlalch_types.py  types.py  validators.py
warp_fastapi/code/: config.py  utils.py
warp_fastapi/code/User/: authentication.py
warp_fastapi/code/alembic/: alembic.py
warp_fastapi/code/code_objects/: base.py  database.py  dependacies.py  main.py  model.py  repository.py  routes.py  schema.py  security.py  service.py  settings.py  tests.py
warp_fastapi/code/devops/: docker.py  dotenv.py  git.py  local.py
